--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Title</title>
-</head>
-<body>
-	<h1>Main heading</h1>
-	<p>Paragraph of text</p>
-</body>
+   <head>
+      <meta charset="utf-8">
+      <title>Title</title>
+   </head>
+   <body>
+      <h1>Main heading</h1>
+      <p>Download:</p>
+      <form action="" method="get">
+         <input type="text" name="download" value="Sisesta midagi siia">
+         <input type="submit" value="Download file">
+      </form>
+      <p>Upload:</p>
+      <form action="" method="post" enctype="multipart/form-data">
+         <input type="submit" value="Upload file">
+		 <input type="file" name="fileName">
+      </form>
+      <p>Delete:</p>
+      <form action="" method="get">
+         <input type="text" name="delete" value="Sisesta midagi siia">
+         <input type="submit" value="Delete file">
+      </form>
+   </body>
 </html>
