Added post request

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Title</title>
+	  <link rel="stylesheet" href="ü.css">
    </head>
    <body>
       <h1>Main heading</h1>
