DynamicPage. Also added some bugs.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
          <input type="text" name="delete" value="Sisesta midagi siia">
          <input type="submit" value="Delete file">
       </form>
+	  <a href=files/>files</a>
    </body>
 </html>
