--- a/login-template.html
+++ b/login-template.html
@@ -2,19 +2,20 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Login</title>
+	<title>#title#</title>
 </head>
 <body>
 	<form method="post">
 		<div>
-			<input type="text" id="say" name="username" placeholder="Username">
+			<input type="text" name="username" placeholder="Username">
 		</div>
 		<div>
 			<input type="password" name="password" placeholder="Password">
 		</div>
 		<div>
-			<input type="submit" value="Sign in">
+			<input type="submit" value="#button#">
 		</div>
 	</form>
+	#paragraph#
 </body>
 </html>
