--- a/login-template.html
+++ b/login-template.html
@@ -7,7 +7,7 @@
 <body>
 	<form method="post">
 		<div>
-			<input type="text" name="username" placeholder="Username">
+			<input type="text" name="username" placeholder="Username" maxlength="50">
 		</div>
 		<div>
 			<input type="password" name="password" placeholder="Password">
