--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>#title#</title>
-	  <link rel="stylesheet" type="text/css" href="default.css">
+	  <link rel="stylesheet" type="text/css" href="/default.css">
    </head>
    <body>#body#</body>
 </html>
