--- a/app/src/main/resources/WebContent/index_admin.html
+++ b/app/src/main/resources/WebContent/index_admin.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
 </head>
 <body>
-    <ul>
-        <li><a href="/files/">Files</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li>
-    </ul>
+<ul>
+    <li><a href="/files/">Files</a></li>
+    <li><a href="/users">Users</a></li>
+    <li><a href="/logout">Log Out</a></li>
+</ul>
+<p>Logged in as #username#.</p>
 </body>
 </html>
