--- a/app/src/main/resources/WebContent/index_user.html
+++ b/app/src/main/resources/WebContent/index_user.html
@@ -8,7 +8,7 @@
 <body>
 <ul>
     <li><a href="/files/">Files</a></li>
-    <li><a href="/logout/">Log Out</a></li>
+    <li><a href="/logout">Log Out</a></li>
 </ul>
 <p>Logged in as #username#.</p>
 </body>
