Added MIME handler. Bug fixes.

--- a/app/src/main/resources/WebContent/list-template-delete.html
+++ b/app/src/main/resources/WebContent/list-template-delete.html
@@ -11,12 +11,14 @@
     <table>
         <tr>
             <th>File Name</th>
+            <th>MIME</th>
             <th>Last Modified</th>
             <th>Size (bytes)</th>
             <th>Select</th>
         </tr>
         <tr>
             <td><a href="../">../</a></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
