--- a/app/src/main/resources/WebContent/list-template-guest.html
+++ b/app/src/main/resources/WebContent/list-template-guest.html
@@ -10,11 +10,13 @@
     <table>
         <tr>
             <th>File Name</th>
+            <th>MIME</th>
             <th>Last Modified</th>
             <th>Size (bytes)</th>
         </tr>
         <tr>
             <td><a href="../">../</a></td>
+            <td></td>
             <td></td>
             <td></td>
         </tr>
