--- a/app/src/main/resources/WebContent/list-template-user-normal.html
+++ b/app/src/main/resources/WebContent/list-template-user-normal.html
@@ -10,11 +10,13 @@
 <table>
     <tr>
         <th>File Name</th>
+        <th>MIME</th>
         <th>Last Modified</th>
         <th>Size (bytes)</th>
     </tr>
     <tr>
         <td><a href="../">../</a></td>
+        <td></td>
         <td></td>
         <td></td>
     </tr>
@@ -30,6 +32,12 @@
 <div>
     <form method="get">
         <input type="submit" name="delete" value="Delete Files">
+    </form>
+</div>
+<div>
+    <form method="get">
+        <input type="submit" name="folder" value="Create folder">
+        <input type="text" name="folder-name" placeholder="Folder name">
     </form>
 </div>
 </body>
