--- a/app/src/main/resources/WebContent/index_admin.html
+++ b/app/src/main/resources/WebContent/index_admin.html
@@ -11,6 +11,6 @@
     <li><a href="/users">Users</a></li>
     <li><a href="/logout">Log Out</a></li>
 </ul>
-<p>Logged in as #username#.</p>
+<p>Logged in as <b>#username#</b>.</p>
 </body>
 </html>
