--- a/app/src/main/resources/WebContent/index_user.html
+++ b/app/src/main/resources/WebContent/index_user.html
@@ -10,6 +10,6 @@
     <li><a href="/files/">Files</a></li>
     <li><a href="/logout">Log Out</a></li>
 </ul>
-<p>Logged in as #username#.</p>
+<p>Logged in as <b>#username#</b>.</p>
 </body>
 </html>
